Se adaptó el layout de la página catalog.html para relaciones de aspecto verticales. Con esto, la visualización del catalogo mejora en dispotivos moviles.

--- a/proyecto_final/backend/.env
+++ b/proyecto_final/backend/.env
@@ -4,4 +4,4 @@ DB_HOST=localhost
 DB_PORT=5432
 DB_DATABASE=autos
 JWT_SECRET=secret_key
-JWT_EXPIRES_IN=5m  # El token expirará en 5m
+JWT_EXPIRES_IN=5m 
